[package]
name = "bioinformatics_algorithms"
version = "0.1.0"
authors = ["Luiz Irber <contact@luizirber.org>"]
edition = "2018"

[lib]
name = "bioinformatics_algorithms"

[[bin]]
name = "ba1a"
path = "src/ba1a.rs"
test = false

[[bin]]
name = "ba1b"
path = "src/ba1b.rs"
test = false

[[bin]]
name = "ba1c"
path = "src/ba1c.rs"
test = false

[[bin]]
name = "ba1d"
path = "src/ba1d.rs"
test = false

[[bin]]
name = "ba1e"
path = "src/ba1e.rs"
test = false

[[bin]]
name = "ba1f"
path = "src/ba1f.rs"
test = false

[[bin]]
name = "ba1g"
path = "src/ba1g.rs"
test = false

[[bin]]
name = "ba1h"
path = "src/ba1h.rs"
test = false

[[bin]]
name = "ba1i"
path = "src/ba1i.rs"
test = false

[[bin]]
name = "ba1j"
path = "src/ba1j.rs"
test = false

[[bin]]
name = "ba2a"
path = "src/ba2a.rs"
test = false

# Commented out until the product iter is properly implemented
#[[bin]]
#name = "ba2b"
#path = "src/ba2b.rs"

[[bin]]
name = "ba3a"
path = "src/ba3a.rs"
test = false

[[bin]]
name = "ba3b"
path = "src/ba3b.rs"
test = false

[[bin]]
name = "ba3c"
path = "src/ba3c.rs"
test = false

[[bin]]
name = "ba3d"
path = "src/ba3d.rs"
test = false

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.0"
tempfile = "3.0.7"

[dependencies]
